--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Music Playlist Generator</title>
-  </head>
-  <body></body>
+</head>
+
+<body>
+    <form id="movie-form">
+        <label for="music-input">Generate artist playlist</label>
+        <input type="text" id="music-input"><br>
+
+
+        <input id="add-music" type="submit" value="search">
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="assets\js\app.js"></script>
+</body>
+
 </html>
