--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel=“stylesheet” href=“https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css” />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Music Playlist Generator</title>
-</head>
+  </head>
 
-<body>
-    <form id="movie-form">
-        <label for="music-input">Generate artist playlist</label>
-        <input type="text" id="music-input"><br>
+  <body>
+    <!--NavBar-->
 
+    <!--Search Form-->
+    <!-- <form id="movie-form">
+      <label for="music-input">Generate artist playlist</label>
+      <input type="text" id="music-input" /><br />
 
-        <input id="add-music" type="submit" value="search">
-    </form>
+      <input id="add-music" type="submit" value="search" />
+    </form> -->
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <div class="container">
+      <div class="row">
+        <div class="column is-full" id="homepageHeader">
+          <img
+            src="assets/img/project-1-logo.png"
+            alt="Music Playlist Generator Header"
+          />
+        </div>
+      </div>
+      <div class="row" id="searchForm">
+        <div class="column is-full">
+          <div class="control">
+            <label id="searchLabel">Search for an Artist:</label>
+            <input
+              class="input"
+              type="text"
+              placeholder="Text input"
+              id="music-input"
+            />
+            <button class="button" id="add-music">Submit</button>
+          </div>
+        </div>
+      </div>
+      <div class="row searchResults">
+        <div class="column is-full">
+          <div id="music-list"></div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
     <script src="assets\js\app.js"></script>
-</body>
-
+  </body>
 </html>
