created loop for adding js elements to html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <form id="movie-form">
         <label for="music-input">Generate artist playlist</label>
         <input type="text" id="music-input"><br>
-
-
         <input id="add-music" type="submit" value="search">
     </form>
+
+    <div id="music-list">
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="assets\js\app.js"></script>
