--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row searchResults">
-        <div class="columns">
+        <div class="columns is-centered">
         <div class="column is-half">
           <div id="music-list"></div>
         </div>
