updated background, song list, submit button, title image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <input
                 class="input"
                 type="text"
-                placeholder="Text input"
+                placeholder=""
                 id="music-input"
               />
               <button class="button" id="add-music">Submit</button>
