--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                 <img src="assets/img/project-1-logo.png" alt="Music Playlist Generator Header" />
             </div>
         </div>
-        <div class="row" id="searchForm">
+        <form class="row" id="searchForm">
             <div class="column is-full">
                 <div class="control">
                     <label id="searchLabel">Search for an Artist:</label>
                     <input class="input" type="text" placeholder="Text input" id="music-input" />
-                    <button class="button" id="add-music">Submit</button>
+                    <button class="button" id="add-music" type="submit">Submit</button>
                 </div>
             </div>
-        </div>
+        </form>
         <div class="row searchResults">
             <div class="column is-full">
                 <div id="music-list"></div>
