--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <div class="row searchResults">
         <div class="columns is-centered">
         <div class="column is-half">
+          <div id= "artist-gif"></div>
           <div id="music-list"></div>
         </div>
       </div>
@@ -58,8 +59,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
-    <script src="sean.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/sean.js"></script>
 </body>
 
 </html>
