--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Music Playlist Generator</title>
-</head>
+  </head>
 
-<body>
-    <!--NavBar-->
-
-    <!--Search Form-->
-    <!-- <form id="movie-form">
-      <label for="music-input">Generate artist playlist</label>
-      <input type="text" id="music-input" /><br />
-
-      <input id="add-music" type="submit" value="search" />
-    </form> -->
-
+  <body>
+    <!--Header Title/Logo-->
     <div class="container">
       <div class="row">
         <div class="columns is-centered">
@@ -32,6 +25,7 @@
           </div>
         </div>
       </div>
+      <!--Search Box and Button-->
       <div class="row" id="searchForm">
         <div class="columns is-centered">
           <div class="column is-half">
@@ -48,17 +42,26 @@
           </div>
         </div>
       </div>
+      <!--Search Results-->
       <div class="row searchResults">
         <div class="columns is-centered">
-        <div class="column is-half">
-          <div id="music-list"></div>
+          <div class="column is-half">
+            <div id="gif-image"></div>
+          </div>
         </div>
-      </div>
+        <div class="columns is-centered">
+          <div class="column is-half">
+            <div id="music-list"></div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
     <script src="assets\js\app.js"></script>
-</body>
-
+  </body>
 </html>
