added padding around container, redesigned header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="column is-half" id="homepageHeader">
             <img
               id="logo"
-              src="assets/img/project-1-logo.png"
+              src="assets/img/project-1-logo copy.png"
               alt="Music Playlist Generator Header"
             />
           </div>
