--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
         <div class="columns is-centered">
           <div class="column is-half">
             <div class="control">
-              <label id="searchLabel">Search for an Artist:</label>
-              <input
-                class="input"
-                type="text"
-                placeholder=""
-                id="music-input"
-              />
-              <button class="button" id="add-music">Submit</button>
+              <div class="row">
+                <div class="col">
+                  <label id="searchLabel">Search for an Artist:</label>
+                  <input
+                    class="input"
+                    type="text"
+                    placeholder=""
+                    id="music-input"
+                  />
+                  <button class="button" id="add-music">Submit</button>
+
+                </div>
+              </div>
             </div>
           </div>
         </div>
