fixed window title, implemented background behind individual returns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Music Playlist Generator</title>
+    <title>Find Tune</title>
 </head>
 
 
@@ -53,7 +53,7 @@
                 </div>
                 <div class="columns is-centered">
                     <div class="column is-half">
-                        <div id="music-list"></div>
+                        <div id="music-list" style="display: none;"></div>
                     </div>
                 </div>
             </div>
